# Food-recognition

./: 3DHist.cpp  CMakeLists.txt  LICENSE  README.md  Utilities.cpp  main.cpp
Performance-measurements/: CMakeLists.txt  mAP.cpp
STE/: 3DHist.cpp  CMakeLists.txt  FProj.cpp  RemovePlates.cpp  Utilities.h  plot_matrix.py  testBi.cpp  testCanny.cpp  testKmeans.cpp
Utilities/: Classes.h  Detector_lib.cpp  Detector_lib.hpp  HSVColorPicker.cpp  Plate_rec.cpp  Plate_rec.hpp  Utilities.cpp  Utilities.h  mAP.cpp  mAP.h
assets/: food_categories.txt
