cmake_minimum_required(VERSION 3.0.0)
project(Final_Project)
find_package( OpenCV REQUIRED PATHS C:/OpenCV/builds/install/x64/vc17/lib)
find_package( OpenCV REQUIRED PATHS /usr/local/Cellar/opencv/4.7.0_5/lib)
find_package( OpenCV REQUIRED)
find_package(OpenGL REQUIRED)
find_library(GLUT_LIBRARY GLUT)
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_DIRECTORY}")
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")
SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_DIRECTORY}")
SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")
SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_DIRECTORY}")
SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")
include_directories( ${OpenCV_INCLUDE_DIRS})
add_executable(FProj FProj.cpp Utilities.cpp)
target_link_libraries( FProj ${OpenCV_LIBS} )
include_directories(${OPENGL_INCLUDE_DIRS})
include_directories(/usr/local/include)
add_executable(3DHist 3DHist.cpp Utilities.cpp)
target_link_libraries( 3DHist ${OpenCV_LIBS} ${OPENGL_LIBRARIES} ${GLUT_LIBRARY})